syntax = "proto3";
package m2.model;

import "TileBlueprint.proto";

message LevelBlueprint {
  uint32 width = 1;
  uint32 height = 2;
  repeated TileBlueprint tiles = 3;
}
